img size change

--- a/index.html
+++ b/index.html
@@ -125,23 +125,24 @@
     </div>
   </div>
 </div>
+<div class=" grid  mx-auto d-md-none">
+   
+  <div class="grid-col relative">
+    <img  loading="lazy" class="img-grid " src="./assets/grid-1.png"  alt="">
+    <a href="#" class="portfolio-link text-decoration-none text-center">Evening Make-Up</a>
+  </div>
+  <div class="grid-col relative">
+    <img loading="lazy"  class="img-grid " src="./assets/grid-2.png"  alt="">
+    <a href="#" class="portfolio-link text-decoration-none text-center">Evening Make-Up</a>
+  </div>
+  <div class="grid-col relative">
+    <img loading="lazy"  class="img-grid " src="./assets/grid-3.png"  alt="">
+    <a href="#" class="portfolio-link text-decoration-none text-center">Evening Make-Up</a>
+  </div>
+
   </section>
 
-  <div class=" grid  mx-auto d-md-none">
-   
-          <div class="grid-col relative">
-            <img  loading="lazy" class="img-fluid " src="./assets/grid-1.png"  alt="">
-            <a href="#" class="portfolio-link text-decoration-none">Evening Make-Up</a>
-          </div>
-          <div class="grid-col relative">
-            <img loading="lazy"  class="img-fluid " src="./assets/grid-2.png"  alt="">
-            <a href="#" class="portfolio-link text-decoration-none">Evening Make-Up</a>
-          </div>
-          <div class="grid-col relative">
-            <img loading="lazy"  class="img-fluid " src="./assets/grid-3.png"  alt="">
-            <a href="#" class="portfolio-link text-decoration-none">Evening Make-Up</a>
-          </div>
-        
+ 
     
 
 </div>
@@ -204,7 +205,7 @@
   </div>
   <p class="fst-italic  fs-md-5  reviews-text">"Lorem ipsum,  Enim eius officiis ex niLorem ipsum,  Enim eius officiis ex nisi qsi quibusdam veniam consequuntur, hic aperiam atque laborum maiores iste laudantium nesciunt, inventore culpa! Sequi voluptate eum est?"</p>
   <p class="fs-6">-ALICE, MOSCOW</p>
-  <button type="submit"  class="button  button-long mt-md-5 text-dark ">SIGN UP TO MASTERCLASS</button>
+  <button type="submit"  class="button   mt-md-5 text-dark ">SIGN UP</button>
 
 </div>
 
