--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 </div>
 </div>
 
-  <section class="schedules d-flex flex-column flex-md-row   my-5">
+  <section class="schedules d-flex align-items-center flex-column flex-md-row   my-5">
     <div class="schedules-left col-10 col-md-4 mx-5 px-2 ">
-      <h1 class="heading-schedules">
+      <h1 class="text-center text-md-start">
         Masterclasses & schedules
       </h1>
       <p class="my-4 text-center text-md-start"> adipisci necessitatibus, voluptate, maiores saepe velit? At hic ab voluptatem repellat debitis. Ducimus?
@@ -191,7 +191,7 @@
             <a href="#" class="btn watch-video-btn "> WATCH VIDEO  <span class="span-chev"><i class="fas fa-chevron-right "></i></span> </a>
           </div>
           <div>
-          <button  class="button button-long button-nav mb-3 mt-4 d-flex m-auto"  > WATCH ALL TUTRIALS</button>
+          <button  class="button button-tutorial mb-3 mt-4 d-flex m-auto"  > WATCH All TUTORIALS</button>
         </div>
         </div>
 
@@ -209,8 +209,8 @@
 
 </div>
 
-  <div class="reviews-right col-5 m-auto">
-<img  loading="lazy" src="./assets/reviews.png" class="review-img img-fluid" alt="">
+  <div class="reviews-right col-5">
+<img  loading="lazy" src="./assets/reviews.png" class="  mt-3 review-img img-fluid" alt="">
 </div>
 
 </section>
