change footer menu

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 <div class="footer-bottom  m-2  p-5 d-flex justify-content-between justify-content-between   ">
   <div class="footer-bottom-left d-flex justify-content-between justify-content-around my-auto">
     <p class="font-size-1">2020 Maya Osmolskaya</p>
-    <p class="font-size-1 mx-2 "><a class="text-decoration-none" href="#">Credits</a></p>
+    <p class="font-size-1 mx-2 d-none d-md-block"><a class="text-decoration-none" href="#">Credits</a></p>
   </div>
   <div class="footer-bottom-left d-flex justify-content-around justify-content-between">
     <ul class="d-flex justify-content-around justify-content-between">
